[package]
name = "xgzp6859d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "=1.0.0-alpha.5"

[dev-dependencies]
rppal = { version = "0.13", features = ["hal"]}
tui = "0.16"
termion = "1.5"
rumqttd = "0.9"
confy = "0.4"